fix overflow text in messages box

--- a/src/styles/components/_message.component.scss
+++ b/src/styles/components/_message.component.scss
@@ -62,4 +62,8 @@
     margin-bottom: .3rem;
     width: 100%;
   }
+
+  &__content {
+    word-wrap: break-word;
+  }
 }
